@@ -1,0 +1,11 @@
+= 儲存的新通知
+:allow-uri-read: 
+
+
+
+
+=== 儲存的新通知
+
+NetApp Workload Factory通知服務包括儲存自動容量管理通知。
+
+link:https://docs.netapp.com/us-en/workload-setup-admin/configure-notifications.html["NetApp Workload Factory 通知"]
